src/testing/tests/e2e/alias_action_purge.txt
ENTRYPOINT DEBUG ACTIVE: src/shtest_compiler/shtest.py loaded
[DEBUG] Loaded patterns: ['step', 'action_result', 'action_only', 'result_only', 'comment']
[DEBUG] Pattern for step: ^(?:Étape|Etape|Step)\s*:\s*(.*)$
[DEBUG] Pattern for action_result: ^Action\s*:\s*(.*?)(?:\s*;\s*(?:R[ée]sultat|Resultat)\s*:\s*(.*)|\s*R[ée]sultat\s*:\s*(.*))$
[DEBUG] Pattern for action_only: ^Action\s*:\s*(.*)$
[DEBUG] Pattern for result_only: ^R[ée]sultat\s*:\s*(.*)$
[DEBUG] Pattern for comment: ^\s*#.*$
[DEBUG] Added STEP tokenizer with pattern: ^(?:Étape|Etape|Step)\s*:\s*(.*)$
[DEBUG] Added ACTION_RESULT tokenizer with pattern: ^Action\s*:\s*(.*?)(?:\s*;\s*(?:R[ée]sultat|Resultat)\s*:\s*(.*)|\s*R[ée]sultat\s*:\s*(.*))$
[DEBUG] Added ACTION_ONLY tokenizer with pattern: ^Action\s*:\s*(.*)$
[DEBUG] Added RESULT_ONLY tokenizer with pattern: ^R[ée]sultat\s*:\s*(.*)$
[DEBUG] Added COMMENT tokenizer with pattern: ^\s*#.*$
[DEBUG] Added FallbackTokenizer
[DEBUG] Parsing text with 1 lines
[DEBUG] Lexing text with 1 lines
[DEBUG] RegexTokenizer.tokenize: Yielding TEXT token value=Action: Vider le répertoire /tmp/cache ; Résultat: le répertoire est vidé. at line 1
[DEBUG] RegexTokenizer.tokenize: Yielding token type=TokenType.ACTION_RESULT, value=Vider le répertoire /tmp/cache, result=('Vider le répertoire /tmp/cache', 'le répertoire est vidé.', None), original=Action: Vider le répertoire /tmp/cache ; Résultat: le répertoire est vidé. at line 1
[DEBUG] Yielding token: ACTION_RESULT@1:0 'Vider le répertoire /tmp/cache' -> '('Vider le répertoire /tmp/cache', 'le répertoire est vidé.', None)'
[DEBUG] RegexTokenizer.tokenize: Yielding EMPTY token at line 1
[DEBUG] Yielding token: EMPTY@1:0 ''
[DEBUG] Got 2 tokens
[DEBUG] Grammar: _merge_action_result called with 2 tokens
[DEBUG] Grammar: Token 0: kind=ACTION_RESULT, value='Vider le répertoire /tmp/cache'
[DEBUG] Grammar: Token 1: kind=EMPTY, value=''
[DEBUG] Grammar: _merge_action_result returning 2 tokens
[DEBUG] get_action_shell_command called with: 'Vider le répertoire /tmp/cache'
[DEBUG] canonize_action: Loaded 21 action patterns
[DEBUG] canonize_action: Processing action 'Vider le répertoire /tmp/cache' (normalized: 'vider le répertoire /tmp/cache')
[DEBUG] canonize_action: Checking pattern 'Créer le dossier {path}' with handler 'create_dir'
[DEBUG] canonize_action: Testing regex pattern '(?i)^Créer\ le\ dossier\ (.+)$'
[DEBUG] canonize_action: Checking alias 'créer un dossier {path}'
[DEBUG] canonize_action: Testing alias regex '(?i)^créer\ un\ dossier\ (.+)$'
[DEBUG] canonize_action: Checking alias 'faire un dossier {path}'
[DEBUG] canonize_action: Testing alias regex '(?i)^faire\ un\ dossier\ (.+)$'
[DEBUG] canonize_action: Checking alias 'nouveau dossier {path}'
[DEBUG] canonize_action: Testing alias regex '(?i)^nouveau\ dossier\ (.+)$'
[DEBUG] canonize_action: Checking alias 'cr[ée]er le dossier (.+)'
[DEBUG] canonize_action: Checking alias '^mkdir (.+)$'
[DEBUG] canonize_action: Testing regex alias '^mkdir (.+)$'
[DEBUG] canonize_action: Checking pattern 'Supprimer le dossier {path}' with handler 'delete_dir'
[DEBUG] canonize_action: Testing regex pattern '(?i)^Supprimer\ le\ dossier\ (.+)$'
[DEBUG] canonize_action: Checking alias 'effacer le dossier {path}'
[DEBUG] canonize_action: Testing alias regex '(?i)^effacer\ le\ dossier\ (.+)$'
[DEBUG] canonize_action: Checking alias 'enlever le dossier {path}'
[DEBUG] canonize_action: Testing alias regex '(?i)^enlever\ le\ dossier\ (.+)$'
[DEBUG] canonize_action: Checking alias 'retirer le dossier {path}'
[DEBUG] canonize_action: Testing alias regex '(?i)^retirer\ le\ dossier\ (.+)$'
[DEBUG] canonize_action: Checking alias '^rm -rf (.+)$'
[DEBUG] canonize_action: Testing regex alias '^rm -rf (.+)$'
[DEBUG] canonize_action: Checking pattern 'Copier le dossier {src} vers {dest}' with handler 'copy_dir'
[DEBUG] canonize_action: Testing regex pattern '(?i)^Copier\ le\ dossier\ (.+)\ vers\ (.+)$'
[DEBUG] canonize_action: Checking alias 'dupliquer le dossier {src} vers {dest}'
[DEBUG] canonize_action: Testing alias regex '(?i)^dupliquer\ le\ dossier\ (.+)\ vers\ (.+)$'
[DEBUG] canonize_action: Checking alias 'copier le dossier {src} à {dest}'
[DEBUG] canonize_action: Testing alias regex '(?i)^copier\ le\ dossier\ (.+)\ à\ (.+)$'
[DEBUG] canonize_action: Checking alias '^cp -r (.+) (.+)$'
[DEBUG] canonize_action: Testing regex alias '^cp -r (.+) (.+)$'
[DEBUG] canonize_action: Checking pattern 'Déplacer le dossier {src} vers {dest}' with handler 'move_dir'
[DEBUG] canonize_action: Testing regex pattern '(?i)^Déplacer\ le\ dossier\ (.+)\ vers\ (.+)$'
[DEBUG] canonize_action: Checking alias 'déplacer le dossier {src} à {dest}'
[DEBUG] canonize_action: Testing alias regex '(?i)^déplacer\ le\ dossier\ (.+)\ à\ (.+)$'
[DEBUG] canonize_action: Checking alias '^mv (.+) (.+)$'
[DEBUG] canonize_action: Testing regex alias '^mv (.+) (.+)$'
[DEBUG] canonize_action: Checking pattern 'Purger le répertoire {path}' with handler 'purge_dir'
[DEBUG] canonize_action: Testing regex pattern '(?i)^Purger\ le\ répertoire\ (.+)$'
[DEBUG] canonize_action: Checking alias 'vider le répertoire {path}'
[DEBUG] canonize_action: Testing alias regex '(?i)^vider\ le\ répertoire\ (.+)$'
[DEBUG] canonize_action: Found match with alias 'vider le répertoire {path}'
[DEBUG] get_action_shell_command: canonize_action matched handler 'purge_dir' for phrase 'Purger le répertoire {path}'
[DEBUG] get_action_shell_command: context={'action': 'Vider le répertoire /tmp/cache', 'handler': 'purge_dir', 'category': 'directory_operations', 'variables': {'path': '/tmp/cache'}, 'requirements': {'required_variables': ['path'], 'optional_variables': [], 'scope': 'global', 'description': 'Remove all contents from a directory', 'category': 'directory_operations', 'validation_rules': {'path': {'type': 'path', 'required': True}}}, 'patterns_matched': [{'type': 'alias', 'pattern': 'vider le répertoire {path}', 'config': {'type': 'action', 'phrase': 'Purger le répertoire {path}', 'aliases': ['vider le répertoire {path}', 'nettoyer le répertoire {path}', '^rm -rf (.+)/\\\\*$'], 'handler': 'purge_dir'}}], 'scope': 'global'}
[DEBUG] get_action_shell_command: handler=purge_dir, variables={'path': '/tmp/cache'}
[DEBUG] get_action_shell_command: Trying action handler: shtest_compiler.core.action_handlers.purge_dir
[DEBUG] get_action_shell_command: Calling action handler with params={'context': {'action': 'Vider le répertoire /tmp/cache', 'handler': 'purge_dir', 'category': 'directory_operations', 'variables': {'path': '/tmp/cache'}, 'requirements': {'required_variables': ['path'], 'optional_variables': [], 'scope': 'global', 'description': 'Remove all contents from a directory', 'category': 'directory_operations', 'validation_rules': {'path': {'type': 'path', 'required': True}}}, 'patterns_matched': [{'type': 'alias', 'pattern': 'vider le répertoire {path}', 'config': {'type': 'action', 'phrase': 'Purger le répertoire {path}', 'aliases': ['vider le répertoire {path}', 'nettoyer le répertoire {path}', '^rm -rf (.+)/\\\\*$'], 'handler': 'purge_dir'}}], 'scope': 'global'}, 'path': '/tmp/cache'}
[DEBUG] get_action_shell_command: Action handler returned=<shtest_compiler.core.action_handlers.purge_dir.PurgeDirAction object at 0x000001597F684B90>
[DEBUG] get_action_shell_command: Generated shell command: rm -rf '/tmp/cache'/*
[DEBUG] compile_validation_expression called with: 'le répertoire est vidé'
[DEBUG] compile_validation_expression: Detected atomic expression, using compile_atomic
[DEBUG] compile_atomic called with: expected='le répertoire est vidé', varname='result', last_file_var=None, extracted_args=None, action_context={'command': 'Vider le répertoire /tmp/cache'}
[DEBUG] compile_atomic: Trying to canonize validation: 'le répertoire est vidé'
[DEBUG] compile_atomic: canonize_validation('le répertoire est vidé') result: None
[ERROR] ValidationParseError: No matcher found for validation: 'le répertoire est vidé'
Traceback (most recent call last):
  File "C:\Users\Sventer\OneDrive\Documents\batch testing\src\shtest_compiler\compiler\shell_generator.py", line 171, in visit
    shellframework_ast = ShtestToShellFrameworkVisitor().visit(node)
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sventer\OneDrive\Documents\batch testing\src\shtest_compiler\ast\visitor.py", line 23, in visit
    return visitor_method(node)
           ^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sventer\OneDrive\Documents\batch testing\src\shtest_compiler\ast\shtest_to_shellframework_visitor.py", line 166, in visit_shtestfile
    validation_lines = self.compile_validation_expression(action.result_expr, action_context={'command': action.command})
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sventer\OneDrive\Documents\batch testing\src\shtest_compiler\ast\shtest_to_shellframework_visitor.py", line 237, in compile_validation_expression
    return compile_atomic(expression, varname="result", last_file_var=None, action_context=action_context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sventer\OneDrive\Documents\batch testing\src\shtest_compiler\compiler\atomic_compiler.py", line 30, in compile_atomic
    raise ValidationParseError(f"No matcher found for validation: '{expected}'")
shtest_compiler.core.errors.ValidationParseError: No matcher found for validation: 'le répertoire est vidé'

Compiled C:\Users\Sventer\OneDrive\Documents\batch testing\src\tests\e2e\alias_action_purge.shtest -> C:\Users\Sventer\OneDrive\Documents\batch testing\src\tests\e2e\alias_action_purge.sh
